# microservices-demo

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  TASKS.md
deployments/docker/: docker-compose.yml  init-db.sql
deployments/docker/observability/: prometheus.yml  promtail.yml  tempo.yml
deployments/k8s/base/: cart-service.yaml  catalog-service.yaml  frontend.yaml  gateway.yaml  kustomization.yaml  mailhog.yaml  notification-service.yaml  order-service.yaml  payment-service.yaml  postgres.yaml  redis.yaml  shipping-service.yaml  user-service.yaml
deployments/kubernetes/base/: cart-service.yaml  catalog-service.yaml  configmap.yaml  frontend.yaml  (+11 more)
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
gateway/: Dockerfile  go.mod  go.sum
gateway/integration/: checkout_flow_test.go
proto/: go.mod
scripts/: apply-migrations.sh  download-product-images.sh  proto-gen.sh  seed-data.sh
services/cart/: Dockerfile  go.mod  go.sum
services/catalog/: Dockerfile  go.mod
services/notification/: Dockerfile  go.mod
services/order/: Dockerfile  go.mod  go.sum
services/payment/: Cargo.toml  Dockerfile  build.rs
services/payment/migrations/: 001_create_payment_methods_table.down.sql  001_create_payment_methods_table.up.sql  002_create_transactions_table.up.sql
services/payment/src/: config.rs  main.rs  repository.rs  server.rs  service.rs  telemetry.rs
services/shipping/: Dockerfile  go.mod
services/user/: Dockerfile  go.mod  go.sum
shared/: go.mod  go.sum
shared/observability/: grpc.go  http.go  logger.go  tracing.go
(+156 files in other folders)
