[package]
name = "payment-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.14.5"
prost = "0.14.3"
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = "0.4.43"
sha2 = "0.10.9"
hex = "0.4.3"
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"
